# tft-riot-api

./: .gitignore  .pylintrc  README.md  example.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: line_and_test.yml  lint.yml  lint_and_test.yml
db/: client.py  test_client.py
etl/jobs/: insert_match_data.py
etl/postgresql/: client.py  settings.py
riot/: client.py  errors.py  objects.py  platform_and_region.py  settings.py  test_client.py  utils.py
riot/utils/: dto.py  search.py  types.py
