[tool.poetry]
name = "tft-riot-api"
authors = ["Taeyoung Son", "Haejin Lee"]
description = "TFT Riot API"
package-mode = false

[tool.poetry.dependencies]
python="^3.11"
annotated-types="^0.7.0"
astroid="^3.3.5"
black="^24.10.0"
certifi="^2024.8.30"
charset-normalizer="^3.4.0"
click="^8.1.7"
colorama="^0.4.6"
dill="^0.3.9"
idna="^3.10"
isort="^5.13.2"
loguru="^0.7.2"
mccabe="^0.7.0"
mypy-extensions="^1.0.0"
packaging="^24.1"
pathspec="^0.12.1"
platformdirs="^4.3.6"
pydantic="^2.9.2"
pydantic_core="^2.23.4"
pylint="^3.3.1"
pyrate-limiter="^2.10.0"
python-dotenv="^1.0.1"
requests="^2.32.3"
requests-ratelimiter="^0.7.0"
tomlkit="^0.13.2"
typing_extensions="^4.12.2"
tqdm="^4.66.6"
urllib3="^2.2.3"
win32-setctime="^1.1.0"
absl-py = "^2.1.0"
